@@ -1,3 +1,8 @@
+2012-03-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  Fixed stack unbalance bug.
+
 2012-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCasm.c (FileBaseName): fixed bug 3511092
